feat: add routes in swagger ui
