# backend/api/handler/wish_list.go
@@ -1,0 +1,35 @@
+package handler
+
+import "github.com/gin-gonic/gin"
+
+// @BasePath /api/v1
+
+// @Summary      Add Product to Wish List
+// @Description  Adds a product to the user wish list
+// @Tags         wishlist
+// @Produce      json
+// @Success      200 {object} map[string]string
+// @Router       /wishlist [post]
+func AddProductWishList(ctx *gin.Context) {
+	sendSuccess(ctx, "Add Product in Wish List!")
+}
+
+// @Summary      Delete Product from Wish List
+// @Description  Removes a product from the user wish list
+// @Tags         wishlist
+// @Produce      json
+// @Success      200 {object} map[string]string
+// @Router       /wishlist/{id} [delete]
+func DeleteProductWishList(ctx *gin.Context) {
+	sendSuccess(ctx, "Delete Product in Wish List!")
+}
+
+// @Summary      Get Wish List Items
+// @Description  Returns all products in the user wish list
+// @Tags         wishlist
+// @Produce      json
+// @Success      200 {array} map[string]string
+// @Router       /wishlist [get]
+func GetItensWishList(ctx *gin.Context) {
+	sendSuccess(ctx, "Get Itens in Wish List!")
+}
