# backend/api/routes/product.go
@@ -1,0 +1,13 @@
+package routes
+
+import (
+	"github.com/ExtraProjects860/Project-Device-Mobile/handler"
+	"github.com/gin-gonic/gin"
+)
+
+func RegisterProductRoutes(rg *gin.RouterGroup) {
+	productGroup := rg.Group("/products")
+	productGroup.GET("/", handler.GetProducts)
+	productGroup.POST("/", handler.CreateProduct)
+	productGroup.PATCH("/{id}", handler.UpdateProduct)
+}
